--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 TemplateGenerator.01.fmw.recover
 TemplateGenerator.01.log
+LIO.TRAPLINE_AREA_FT.gdb
+LIO.TRAPLINE_AREA_STATUS.gdb
+LIO.TRAPLINE_TYPE.gdb
+TRAPLINE_AREA_FT.gdb
+TRAPLINE_AREA_STATUS.gdb
+TRAPLINE_TYPE.gdb
+wb-xlate-1759954774661_5060
+wb-xlate-1759858946465_5060.writingout
+NULL.gdb
+Output.gdb
